buttons scroll pos fix - align

--- a/client/public/index.css
+++ b/client/public/index.css
@@ -2384,6 +2384,7 @@ button#dropdown-basic-1 {
   z-index: 999;
   position: fixed;
   bottom: 0;
+  left: 0;
   width: 100%;
   padding: 0 15px;
   pointer-events: none;
